tenor code pound